completed reading data

--- a/pandasDemo.ipynb
+++ b/pandasDemo.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -983,132 +983,27 @@
        "      <td>1</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>718</th>\n",
-       "      <td>650</td>\n",
-       "      <td>Chespin</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>56</td>\n",
-       "      <td>61</td>\n",
-       "      <td>65</td>\n",
-       "      <td>48</td>\n",
-       "      <td>45</td>\n",
-       "      <td>38</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>719</th>\n",
-       "      <td>651</td>\n",
-       "      <td>Quilladin</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>61</td>\n",
-       "      <td>78</td>\n",
-       "      <td>95</td>\n",
-       "      <td>56</td>\n",
-       "      <td>58</td>\n",
-       "      <td>57</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>720</th>\n",
-       "      <td>652</td>\n",
-       "      <td>Chesnaught</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Fighting</td>\n",
-       "      <td>88</td>\n",
-       "      <td>107</td>\n",
-       "      <td>122</td>\n",
-       "      <td>74</td>\n",
-       "      <td>75</td>\n",
-       "      <td>64</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>740</th>\n",
-       "      <td>672</td>\n",
-       "      <td>Skiddo</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>66</td>\n",
-       "      <td>65</td>\n",
-       "      <td>48</td>\n",
-       "      <td>62</td>\n",
-       "      <td>57</td>\n",
-       "      <td>52</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>741</th>\n",
-       "      <td>673</td>\n",
-       "      <td>Gogoat</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>123</td>\n",
-       "      <td>100</td>\n",
-       "      <td>62</td>\n",
-       "      <td>97</td>\n",
-       "      <td>81</td>\n",
-       "      <td>68</td>\n",
-       "      <td>6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>70 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       #                   Name Type 1    Type 2   HP  Attack  Defense  \\\n",
-       "0      1              Bulbasaur  Grass    Poison   45      49       49   \n",
-       "1      2                Ivysaur  Grass    Poison   60      62       63   \n",
-       "2      3               Venusaur  Grass    Poison   80      82       83   \n",
-       "3      3  VenusaurMega Venusaur  Grass    Poison   80     100      123   \n",
-       "48    43                 Oddish  Grass    Poison   45      50       55   \n",
-       "..   ...                    ...    ...       ...  ...     ...      ...   \n",
-       "718  650                Chespin  Grass       NaN   56      61       65   \n",
-       "719  651              Quilladin  Grass       NaN   61      78       95   \n",
-       "720  652             Chesnaught  Grass  Fighting   88     107      122   \n",
-       "740  672                 Skiddo  Grass       NaN   66      65       48   \n",
-       "741  673                 Gogoat  Grass       NaN  123     100       62   \n",
+       "     #                   Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
+       "0    1              Bulbasaur  Grass  Poison  45      49       49       65   \n",
+       "1    2                Ivysaur  Grass  Poison  60      62       63       80   \n",
+       "2    3               Venusaur  Grass  Poison  80      82       83      100   \n",
+       "3    3  VenusaurMega Venusaur  Grass  Poison  80     100      123      122   \n",
+       "48  43                 Oddish  Grass  Poison  45      50       55       75   \n",
        "\n",
-       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
-       "0         65       65     45           1      False  \n",
-       "1         80       80     60           1      False  \n",
-       "2        100      100     80           1      False  \n",
-       "3        122      120     80           1      False  \n",
-       "48        75       65     30           1      False  \n",
-       "..       ...      ...    ...         ...        ...  \n",
-       "718       48       45     38           6      False  \n",
-       "719       56       58     57           6      False  \n",
-       "720       74       75     64           6      False  \n",
-       "740       62       57     52           6      False  \n",
-       "741       97       81     68           6      False  \n",
-       "\n",
-       "[70 rows x 12 columns]"
+       "    Sp. Def  Speed  Generation  Legendary  \n",
+       "0        65     45           1      False  \n",
+       "1        80     60           1      False  \n",
+       "2       100     80           1      False  \n",
+       "3       120     80           1      False  \n",
+       "48       65     30           1      False  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1030,7 @@
     "  \n",
     "print('--------------------------------------') \n",
     "#finding specific data that is not integer based using df.locals\n",
-    "df.loc[df['Type 1'] == \"Grass\"]"
+    "df.loc[df['Type 1'] == \"Grass\"][0:5]"
    ]
   },
   {
