exporting data to a desired file format

--- a/pandasDemo.ipynb
+++ b/pandasDemo.ipynb
@@ -1028,6 +1028,26 @@
     "df.head(5)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting the modified data to the desired file format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Saving the updated data to a csv\n",
+    "\n",
+    "df.to_csv('modified.csv', index=False) # index = False does not create an extra index\n",
+    "df.to_excel('modifiedExcel.xlsx', index=False) # saving to excel\n",
+    "df.to_csv('modified.txt', index=False,sep='\\n') # saving to text / tab separated document"
+   ]
   }
  ],
  "metadata": {
