--- a/pandasDemo.ipynb
+++ b/pandasDemo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "48       65     30           1      False  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "max    180.000000     6.00000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "4       50     65           1      False    309  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
        "19       15       80    145           1      False  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
        "5     80           1      False  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1673,13 +1673,417 @@
        "30       50       50     90           1      False  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[df['Name'].str.contains('^pi[a-z*]', flags=re.I, regex=True)][0:5] #all in Name column starting with pi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditional Changes based on filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>405</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Charizard</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>534</td>\n",
+       "      <td>78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>78</td>\n",
+       "      <td>109</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>130</td>\n",
+       "      <td>111</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard Y</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>104</td>\n",
+       "      <td>78</td>\n",
+       "      <td>159</td>\n",
+       "      <td>115</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                       Name  Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "4  4                 Charmander  Flamer     NaN    309  39      52       43   \n",
+       "5  5                 Charmeleon  Flamer     NaN    405  58      64       58   \n",
+       "6  6                  Charizard  Flamer  Flying    534  78      84       78   \n",
+       "7  6  CharizardMega Charizard X  Flamer  Dragon    634  78     130      111   \n",
+       "8  6  CharizardMega Charizard Y  Flamer  Flying    634  78     104       78   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "4       60       50     65           1      False  \n",
+       "5       80       65     80           1      False  \n",
+       "6      109       85    100           1      False  \n",
+       "7      130       85    100           1      False  \n",
+       "8      159      115    100           1      False  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#changing data in a category\n",
+    "df.loc[df['Type 1'] == 'Fire', 'Type 1'] = 'Flamer'\n",
+    "df.loc[df['Type 1'].str.contains('flamer', flags=re.I, regex=True)][0:5] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>405</td>\n",
+       "      <td>58</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Charizard</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>534</td>\n",
+       "      <td>78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>78</td>\n",
+       "      <td>109</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>130</td>\n",
+       "      <td>111</td>\n",
+       "      <td>130</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6</td>\n",
+       "      <td>CharizardMega Charizard Y</td>\n",
+       "      <td>Flamer</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>634</td>\n",
+       "      <td>78</td>\n",
+       "      <td>104</td>\n",
+       "      <td>78</td>\n",
+       "      <td>159</td>\n",
+       "      <td>115</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>Water</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>314</td>\n",
+       "      <td>44</td>\n",
+       "      <td>48</td>\n",
+       "      <td>65</td>\n",
+       "      <td>50</td>\n",
+       "      <td>64</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                       Name  Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1                  Bulbasaur   Grass  Poison    318  45      49       49   \n",
+       "1  2                    Ivysaur   Grass  Poison    405  60      62       63   \n",
+       "2  3                   Venusaur   Grass  Poison    525  80      82       83   \n",
+       "3  3      VenusaurMega Venusaur   Grass  Poison    625  80     100      123   \n",
+       "4  4                 Charmander  Flamer     NaN    309  39      52       43   \n",
+       "5  5                 Charmeleon  Flamer     NaN    405  58      64       58   \n",
+       "6  6                  Charizard  Flamer  Flying    534  78      84       78   \n",
+       "7  6  CharizardMega Charizard X  Flamer  Dragon    634  78     130      111   \n",
+       "8  6  CharizardMega Charizard Y  Flamer  Flying    634  78     104       78   \n",
+       "9  7                   Squirtle   Water     NaN    314  44      48       65   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  \n",
+       "5       80       65     80           1      False  \n",
+       "6      109       85    100           1      False  \n",
+       "7      130       85    100           1      False  \n",
+       "8      159      115    100           1      False  \n",
+       "9       50       64     43           1      False  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#using contents of one column to affect contents of another\n",
+    "#set the legendary column of all with fire to true\n",
+    "df.loc[df['Type 1'] == 'Flamer', 'Legendary'] = False \n",
+    "df.head(10)"
    ]
   }
  ],
