--- a/pandasDemo.ipynb
+++ b/pandasDemo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "48       65     30           1      False  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "max    180.000000     6.00000  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
        "[800 rows x 12 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
        "4       50     65           1      False    309  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
        "19       15       80    145           1      False  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
        "5     80           1      False  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
        "30       50       50     90           1      False  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
        "8      159      115    100           1      False  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1844,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2164,7 +2164,7 @@
        "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>Charizard</td>\n",
-       "      <td>Fire</td>\n",
+       "      <td>Flamer</td>\n",
        "      <td>Flying</td>\n",
        "      <td>534</td>\n",
        "      <td>78</td>\n",
@@ -2180,7 +2180,7 @@
        "      <th>7</th>\n",
        "      <td>6</td>\n",
        "      <td>CharizardMega Charizard X</td>\n",
-       "      <td>Fire</td>\n",
+       "      <td>Flamer</td>\n",
        "      <td>Dragon</td>\n",
        "      <td>634</td>\n",
        "      <td>78</td>\n",
@@ -2196,7 +2196,7 @@
        "      <th>8</th>\n",
        "      <td>6</td>\n",
        "      <td>CharizardMega Charizard Y</td>\n",
-       "      <td>Fire</td>\n",
+       "      <td>Flamer</td>\n",
        "      <td>Flying</td>\n",
        "      <td>634</td>\n",
        "      <td>78</td>\n",
@@ -2264,9 +2264,9 @@
        "     #                       Name  Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
        "2    3                   Venusaur   Grass  Poison    525  80      82       83   \n",
        "3    3      VenusaurMega Venusaur   Grass  Poison    625  80     100      123   \n",
-       "6    6                  Charizard    Fire  Flying    534  78      84       78   \n",
-       "7    6  CharizardMega Charizard X    Fire  Dragon    634  78     130      111   \n",
-       "8    6  CharizardMega Charizard Y    Fire  Flying    634  78     104       78   \n",
+       "6    6                  Charizard  Flamer  Flying    534  78      84       78   \n",
+       "7    6  CharizardMega Charizard X  Flamer  Dragon    634  78     130      111   \n",
+       "8    6  CharizardMega Charizard Y  Flamer  Flying    634  78     104       78   \n",
        "11   9                  Blastoise   Water     NaN    530  79      83      100   \n",
        "12   9    BlastoiseMega Blastoise   Water     NaN    630  79     103      120   \n",
        "23  18        PidgeotMega Pidgeot  Normal  Flying    579  83      80       80   \n",
@@ -2282,7 +2282,7 @@
        "23      135       80    121  TestValue  TestValue  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2304,12 +2304,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Revert to a check point if data is messed up"
+    "### Additional messing about with pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Joe', 'Mary', 'Simon']\n",
+      "       0\n",
+      "0    Joe\n",
+      "1   Mary\n",
+      "2  Simon\n"
+     ]
+    }
+   ],
+   "source": [
+    "column = ['Joe','Mary', 'Simon']\n",
+    "print(column)\n",
+    "\n",
+    "#put a normal list into a dataFrame\n",
+    "data =pd.DataFrame(column)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2333,220 +2359,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>#</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>Total</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Atk</th>\n",
-       "      <th>Sp. Def</th>\n",
-       "      <th>Speed</th>\n",
-       "      <th>Generation</th>\n",
-       "      <th>Legendary</th>\n",
+       "      <th>name</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>318</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>45</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Joe</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>405</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>525</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
+       "      <td>Simon</td>\n",
+       "      <td>0.25</td>\n",
        "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>625</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>309</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Charmeleon</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>405</td>\n",
-       "      <td>58</td>\n",
-       "      <td>64</td>\n",
-       "      <td>58</td>\n",
-       "      <td>80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>80</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Charizard</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Flying</td>\n",
-       "      <td>534</td>\n",
-       "      <td>78</td>\n",
-       "      <td>84</td>\n",
-       "      <td>78</td>\n",
-       "      <td>109</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard X</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Dragon</td>\n",
-       "      <td>634</td>\n",
-       "      <td>78</td>\n",
-       "      <td>130</td>\n",
-       "      <td>111</td>\n",
-       "      <td>130</td>\n",
-       "      <td>85</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard Y</td>\n",
-       "      <td>Fire</td>\n",
-       "      <td>Flying</td>\n",
-       "      <td>634</td>\n",
-       "      <td>78</td>\n",
-       "      <td>104</td>\n",
-       "      <td>78</td>\n",
-       "      <td>159</td>\n",
-       "      <td>115</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Squirtle</td>\n",
-       "      <td>Water</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>314</td>\n",
-       "      <td>44</td>\n",
-       "      <td>48</td>\n",
-       "      <td>65</td>\n",
-       "      <td>50</td>\n",
-       "      <td>64</td>\n",
-       "      <td>43</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   #                       Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1                  Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                    Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3                   Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3      VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4                 Charmander   Fire     NaN    309  39      52       43   \n",
-       "5  5                 Charmeleon   Fire     NaN    405  58      64       58   \n",
-       "6  6                  Charizard   Fire  Flying    534  78      84       78   \n",
-       "7  6  CharizardMega Charizard X   Fire  Dragon    634  78     130      111   \n",
-       "8  6  CharizardMega Charizard Y   Fire  Flying    634  78     104       78   \n",
-       "9  7                   Squirtle  Water     NaN    314  44      48       65   \n",
-       "\n",
-       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
-       "0       65       65     45           1      False  \n",
-       "1       80       80     60           1      False  \n",
-       "2      100      100     80           1      False  \n",
-       "3      122      120     80           1      False  \n",
-       "4       60       50     65           1      False  \n",
-       "5       80       65     80           1      False  \n",
-       "6      109       85    100           1      False  \n",
-       "7      130       85    100           1      False  \n",
-       "8      159      115    100           1      False  \n",
-       "9       50       64     43           1      False  "
+       "    name  height  weight\n",
+       "0    Joe    1.67      54\n",
+       "1   Mary    1.90     100\n",
+       "2  Simon    0.25       1"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('modified.csv')\n",
-    "df.head(10)"
+    "#Build on the above\n",
+    "titled_columns ={\"name\":column, \"height\":[1.67, 1.9, 0.25], \"weight\": [54, 100, 1]}\n",
+    "data = pd.DataFrame(titled_columns)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     54\n",
+       "1    100\n",
+       "2      1\n",
+       "Name: weight, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#selecting data\n",
+    "selected_column = data[\"weight\"]\n",
+    "selected_column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#selecting data at  speficic index\n",
+    "specific_data = data['weight'][1]\n",
+    "specific_data\n",
+    "\n",
+    "select_row = data.iloc[1]\n",
+    "select_row\n",
+    "#extracting a specific value from the selected row\n",
+    "select_row['weight']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  height  weight        bmi\n",
+      "0    Joe    1.67      54  19.362473\n",
+      "1   Mary    1.90     100  27.700831\n",
+      "2  Simon    0.25       1  16.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#manipulate dataFrame values\n",
+    "bmi =[] #weight /(height**2)\n",
+    "\n",
+    "#create a new column in the data with the heading of bmi and a bmi calculated value\n",
+    "data['bmi'] = data['weight']/((data['height'])**2)\n",
+    "\n",
+    "print(data)\n",
+    "#save the dataframe to a file\n",
+    "data.to_csv('bmi.csv')\n"
    ]
   }
  ],
