--- a/numpyDemo.ipynb
+++ b/numpyDemo.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accessing / changing specific elements, rows, columns etc"
+    "### Basics of Indexing  - Accessing / changing specific elements, rows, columns etc"
    ]
   },
   {
@@ -295,6 +295,82 @@
     "#replacing series of numbers e.g. values in a column - e.g. values in column 2\n",
     "a[:,2] = [5,5]\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#working with a 3d Array\n",
+    "b = np.array(\n",
+    " [[[1,2],\n",
+    "   [3,4]],\n",
+    "   [[5,6],\n",
+    "   [7,8]]]\n",
+    ")\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Getting  specific element (work outside in)\n",
+    "#extracting 4 from the above array\n",
+    "b[0,1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1, 2],\n",
+       "        [9, 9]],\n",
+       "\n",
+       "       [[5, 6],\n",
+       "        [8, 8]]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#replacing a subsequence\n",
+    "b[:,1,:]  = [[9,9],[8,8]]\n",
+    "b"
    ]
   }
  ],
