statistics and stacking

--- a/numpyDemo.ipynb
+++ b/numpyDemo.ipynb
@@ -741,7 +741,13 @@
     "\n",
     "- Remember to multiply matrices, the column of the first matrix must be equal to rows of the second matrix\n",
     "- use np.matmul() method to multiply matrices\n",
-    "![Matrix Multiplication](matrixMultiplication.png)"
+    "![Matrix Multiplication](matrixMultiplication.png)\n",
+    "[Further Reference docs on Linear Algebra functions ](https://docs.scipy.org/doc/numpy/reference/routines.linalg.html)\n",
+    "- Determinant\n",
+    "- Trace\n",
+    "- Singular vector decomposition\n",
+    "- Matrix norm\n",
+    "- Inverse"
    ]
   },
   {
@@ -772,6 +778,172 @@
     "#multiplying a and b should result in a 2x2 matrix\n",
     "\n",
     "print(f' a * b: {np.matmul(a, b)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#determinant of identity matrix - usually equal to 1\n",
+    "c = np.identity(3)\n",
+    "np.linalg.det(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Statistics with numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of Stats: 4.0\n",
+      "Min of Stats: 1\n",
+      "Min of Stats on axis 1: [1 4]\n",
+      "Min of Stats on axis 0: [1 2 3 4]\n",
+      "Max of Stats: 7\n",
+      "Min of Stats: 1\n",
+      "-----------------------------------------------------------------\n",
+      "Sum of Stats : 32\n",
+      "Sum of Stats by row : [ 5  7  9 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "stats = np.array([[1,2,3,4], [4,5,6,7]])\n",
+    "stats\n",
+    "\n",
+    "print(f'Mean of Stats: {np.mean(stats)}')\n",
+    "print(f'Min of Stats: {np.min(stats)}')\n",
+    "print(f'Min of Stats on axis 1: {np.min(stats, axis=1)}')\n",
+    "print(f'Min of Stats on axis 0: {np.min(stats, axis=0)}')\n",
+    "print(f'Max of Stats: {np.max(stats)}')\n",
+    "print(f'Min of Stats: {np.min(stats)}')\n",
+    "\n",
+    "print(sep)\n",
+    "print(f'Sum of Stats : {np.sum(stats)}')\n",
+    "print(f'Sum of Stats by row : {np.sum(stats, axis = 0)}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reorganising arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [4 5 6 7]]\n",
+      "current shape: (2, 4)\n",
+      "-----------------------------------------------------------------\n",
+      "Transformed array shape: [[1 2]\n",
+      " [3 4]\n",
+      " [4 5]\n",
+      " [6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "before = np.array([[1,2,3,4], [4,5,6,7]])\n",
+    "print(before)\n",
+    "print(f'current shape: {before.shape}')\n",
+    "print(sep)\n",
+    "\n",
+    "#transforming the array\n",
+    "after = before.reshape((4,2))\n",
+    "print(f'Transformed array shape: {after}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacked Array: [[1 2 3 4]\n",
+      " [5 6 7 8]\n",
+      " [1 2 3 4]\n",
+      " [5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#vertically stacking matrices\n",
+    "v1 = np.array([1,2,3,4])\n",
+    "v2 = np.array([5,6,7,8])\n",
+    "\n",
+    "print(f'Stacked Array: {np.vstack([v1,v2,v1,v2])}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stacked Array: [5 6 7 8 1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Horizontal stacking matrices\n",
+    "v1 = np.array([1,2,3,4])\n",
+    "v2 = np.array([5,6,7,8])\n",
+    "\n",
+    "print(f'Stacked Array: {np.hstack([v2,v1,v2])}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Miscellaneous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data from a file without using pandas\n"
    ]
   }
  ],
