--- a/numpyDemo.ipynb
+++ b/numpyDemo.ipynb
@@ -1100,6 +1100,48 @@
     "#reverse of the above\n",
     "(~((castData >50) & (castData <100)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NumPy Final Task\n",
+    "\n",
+    "![NumPy Final Task](numpyFinalTask.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [16 17]]\n",
+      "-----------------------------------------------------------------\n",
+      "[ 2  8 14 20]\n",
+      "-----------------------------------------------------------------\n",
+      "[[ 4  5]\n",
+      " [24 25]\n",
+      " [29 30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(1,31).reshape(6,5)\n",
+    "a\n",
+    "blue = a[2:4,0:2]\n",
+    "print(blue)\n",
+    "print(sep)\n",
+    "green = a[[0,1,2,3], [1,2,3,4]]\n",
+    "print(green)\n",
+    "print(sep)\n",
+    "red  = a[[0,4,5], 3:]\n",
+    "print(red)"
+   ]
   }
  ],
  "metadata": {
