--- a/Uni_PandasExercises.ipynb
+++ b/Uni_PandasExercises.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,11 @@
       "\n",
       "   Dec-18  Jan-19  Feb-19  Mar-19  \n",
       "3     640     495     215     243  \n",
-      "4     676     408     338     263  \n"
+      "4     676     408     338     263  \n",
+      "4  Dec-18    676\n",
+      "3  Dec-18    640\n",
+      "   Jan-19    495\n",
+      "dtype: int64\n"
      ]
     }
    ],
@@ -293,7 +297,20 @@
     "my_stores = df[df['Unnamed: 0'].isin(['N6','N4'])]\n",
     "print(my_stores)\n",
     "\n",
-    "#find top 3 months for NewYork Stores\n"
+    "#find top 3 months for NewYork Stores\n",
+    "top_three_months = my_stores.drop(columns='Unnamed: 0').stack().nlargest(3)\n",
+    "print(top_three_months)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise three:\n",
+    "Using the data set from exercise 2, above, create a new data table, including headings, that gives the percentage increase for each month, based on the stores average for the year. From this ascertain:\n",
+    "\n",
+    "- Which store had the largest and smallest increase and in which months did they occur?\n",
+    "- Across all the stores which months showed the smallest average increase and the largest average increase?"
    ]
   }
  ],
