Almost completed pandas Uni_PandasExercises

--- a/Uni_PandasExercises.ipynb
+++ b/Uni_PandasExercises.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -283,10 +283,22 @@
       "   Dec-18  Jan-19  Feb-19  Mar-19  \n",
       "3     640     495     215     243  \n",
       "4     676     408     338     263  \n",
+      "\n",
+      "--------------------------------------------------------------------\n",
+      "\n",
+      "Top three months for New York stores: \n",
       "4  Dec-18    676\n",
       "3  Dec-18    640\n",
       "   Jan-19    495\n",
-      "dtype: int64\n"
+      "dtype: int64\n",
+      "\n",
+      "--------------------------------------------------------------------\n",
+      "\n",
+      "Stores where the top 3 months occurred: \n",
+      "            Dec-18  Dec-18  Jan-19\n",
+      "Unnamed: 0                        \n",
+      "N6             640     640     495\n",
+      "N4             676     676     408\n"
      ]
     }
    ],
@@ -299,18 +311,91 @@
     "\n",
     "#find top 3 months for NewYork Stores\n",
     "top_three_months = my_stores.drop(columns='Unnamed: 0').stack().nlargest(3)\n",
-    "print(top_three_months)\n"
+    "print(gap)\n",
+    "print(f'Top three months for New York stores: \\n{top_three_months}')\n",
+    "\n",
+    "#Extract stores where top 3 month occured using boolean indexing\n",
+    "stores_with_top_three_months = my_stores.set_index('Unnamed: 0').loc[:, top_three_months.index.get_level_values(1)].dropna()\n",
+    "\n",
+    "\n",
+    "print(gap)\n",
+    "print(f'Stores where the top 3 months occurred: \\n{stores_with_top_three_months}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The overall lowest sales figure was 215 in the store 'N6' during the month of 'Feb-19'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What was the overall lowest sales figure in which store and which month?\n",
+    "\n",
+    "# Find the overall lowest sales figure and its index (store and month)\n",
+    "min_sales_index = df.drop(columns='Unnamed: 0').values.argmin()\n",
+    "min_store, min_month = divmod(min_sales_index, len(df.columns) - 1)\n",
+    "min_store_name = df.loc[min_store, 'Unnamed: 0']\n",
+    "min_month_name = df.columns[min_month + 1]\n",
+    "\n",
+    "print(f\"The overall lowest sales figure was {df.iloc[min_store, min_month + 1]} \"\n",
+    "      f\"in the store '{min_store_name}' during the month of '{min_month_name}'.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise three:\n",
+    "### Exercise three:\n",
     "Using the data set from exercise 2, above, create a new data table, including headings, that gives the percentage increase for each month, based on the stores average for the year. From this ascertain:\n",
     "\n",
-    "- Which store had the largest and smallest increase and in which months did they occur?\n",
-    "- Across all the stores which months showed the smallest average increase and the largest average increase?"
+    "Which store had the largest and smallest increase and in which months did they occur?\n",
+    "Across all the stores which months showed the smallest average increase and the largest average increase?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set 'Unnamed: 0' as the index for the DataFrame\n",
+    "df.set_index('Unnamed: 0', inplace=True)\n",
+    "\n",
+    "# Calculate the average sales for each store\n",
+    "store_averages = df.drop(columns='Unnamed: 0').mean(axis=1)\n",
+    "\n",
+    "# Calculate the percentage increase for each month relative to the store's average\n",
+    "percentage_increase_df = (df.drop(columns='Unnamed: 0') - store_averages.values.reshape(-1,1)) / store_averages.values.reshape(-1,1) * 100\n",
+    "\n",
+    "# Create a new DataFrame with headings (store names and months)\n",
+    "percentage_increase_table = pd.DataFrame(data=percentage_increase_df.values, index=df['Unnamed: 0'], columns=df.columns[1:])\n",
+    "\n",
+    "# Find the store with the largest and smallest increase and in which months they occurred\n",
+    "largest_increase_store = percentage_increase_table.idxmax().loc['Unnamed: 0']\n",
+    "largest_increase_month = percentage_increase_table.loc[largest_increase_store].idxmax()\n",
+    "smallest_increase_store = percentage_increase_table.idxmin().loc['Unnamed: 0']\n",
+    "smallest_increase_month = percentage_increase_table.loc[smallest_increase_store].idxmin()\n",
+    "\n",
+    "# Find the months with the smallest and largest average increase across all stores\n",
+    "avg_increase_per_month = percentage_increase_table.mean()\n",
+    "smallest_avg_increase_month = avg_increase_per_month.idxmin()\n",
+    "largest_avg_increase_month = avg_increase_per_month.idxmax()\n",
+    "\n",
+    "print(\"Percentage Increase Table:\")\n",
+    "print(percentage_increase_table)\n",
+    "\n",
+    "print(\"\\nStore with the largest increase:\", largest_increase_store, \"in the month of\", largest_increase_month)\n",
+    "print(\"Store with the smallest increase:\", smallest_increase_store, \"in the month of\", smallest_increase_month)\n",
+    "\n",
+    "print(\"\\nMonth with the smallest average increase across all stores:\", smallest_avg_increase_month)\n",
+    "print(\"Month with the largest average increase across all stores:\", largest_avg_increase_month)\n"
    ]
   }
  ],
