completed Data cleaning assignment - advanced programming task

--- a/dataCleaning_in_Pandas.ipynb
+++ b/dataCleaning_in_Pandas.ipynb
@@ -1318,44 +1318,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     123-545-5421\n",
-       "1       1236439775\n",
-       "2              nan\n",
-       "3     123-543-2345\n",
-       "4     876|678|3469\n",
-       "5     304-762-2467\n",
-       "6              nan\n",
-       "7     876|678|3469\n",
-       "8               Na\n",
-       "9     123-545-5421\n",
-       "10             nan\n",
-       "11             nan\n",
-       "12    123-543-2345\n",
-       "13    876|678|3469\n",
-       "14    304-762-2467\n",
-       "15    123-545-5421\n",
-       "16      1236439775\n",
-       "17             nan\n",
-       "18              Na\n",
-       "19    876|678|3469\n",
+       "0     1235455421\n",
+       "1     1236439775\n",
+       "2               \n",
+       "3     1235432345\n",
+       "4     8766783469\n",
+       "5     3047622467\n",
+       "6               \n",
+       "7     8766783469\n",
+       "8               \n",
+       "9     1235455421\n",
+       "10              \n",
+       "11              \n",
+       "12    1235432345\n",
+       "13    8766783469\n",
+       "14    3047622467\n",
+       "15    1235455421\n",
+       "16    1236439775\n",
+       "17              \n",
+       "18              \n",
+       "19    8766783469\n",
        "Name: Phone_Number, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "import numpy as np\n",
     "#cleaning up the Phone_Number\n",
     "#aim to achieve this format 123-545-5421\n",
-    "df[\"Phone_Number\"] =df[\"Phone_Number\"].str.replace('[a-zA-Z0-9]', \"\")\n",
+    "# Convert elements in the column to strings\n",
+    "df[\"Phone_Number\"] = df[\"Phone_Number\"].astype(str)\n",
+    "\n",
+    "# Remove leading and trailing whitespaces if any\n",
+    "df[\"Phone_Number\"] = df[\"Phone_Number\"].str.strip()\n",
+    "#Now try and replace\n",
+    "df[\"Phone_Number\"] =df[\"Phone_Number\"].str.replace(r'\\D', '', regex=True)\n",
     "df[\"Phone_Number\"]\n",
     "\n"
    ]
